html intro and services section layout

--- a/index.html
+++ b/index.html
@@ -3,8 +3,84 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>second porfolio</title>
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link rel="stylesheet" type="text/css" href="css/all.css">
 </head>
-<body>
+
+
   
+<body>
+  <header>
+
+    <div class="logo">
+      <!-- <img src="" alt=""> -->
+    </div>
+
+    <button class="nav-toggle" aria-label="toggle navigation">
+      <span class="hamburger"></span>
+    </button>
+
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+        <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">My work</a></li>
+      </ul>
+    </nav>
+
+  </header>
+  <!-- -------------------->
+  <!-- Introduction Section-->
+  <!-- ------------------------>
+  <section class="intro" id="home">
+
+    <h1 class="section__title section__title--intro">
+      Hi, I am <strong>Eric.</strong>
+    </h1>
+
+    <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+    <!-- <img src="" alt="a picture of myself"> -->
+  </section>
+  
+  <!-- -------------------->
+  <!-- My Services Section-->
+  <!-- ------------------------>
+
+  <section class="my-services" id="services">
+    <h2 class="section__title section__title--services">what i do</h2>
+
+    <div class="services">
+      <div class="service">
+        <h3>Html</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad consectetur, 
+          odit minus perspiciatis modi voluptatibus sapiente facere magnam quas expedita quibusdam numquam 
+          laboriosam perferendis non illo beatae, provident repudiandae?</p>
+      </div> <!-- /service -->
+
+      <div class="service">
+        <h3>CSS</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad consectetur, 
+          odit minus perspiciatis modi voluptatibus sapiente facere magnam quas expedita quibusdam numquam 
+          laboriosam perferendis non illo beatae, provident repudiandae?</p>
+      </div> <!-- /service -->
+
+      <div class="service">
+        <h3>Javascript</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad consectetur, 
+          odit minus perspiciatis modi voluptatibus sapiente facere magnam quas expedita quibusdam numquam 
+          laboriosam perferendis non illo beatae, provident repudiandae?</p>
+      </div> <!-- /service -->
+
+    </div><!-- /services -->
+
+    <a href="#work">See My Work</a>
+  </section>
+
+
+
+
+
+
 </body>
 </html>
