added work and footer section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <ul class="nav__list">
         <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
         <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">My work</a></li>
+        <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+        <li class="nav__item"><a href="#work" class="nav__link">My work</a></li>
       </ul>
     </nav>
 
@@ -73,11 +73,70 @@
       </div> <!-- /service -->
 
     </div><!-- /services -->
-
     <a href="#work">See My Work</a>
+
+  </section>
+
+  <!-- -------------------->
+  <!-- About Me-->
+  <!-- ------------------------>
+  
+  <section class="about-me" id="about">
+    <h2 class="section__title section__title--about"></h2>
+    <p class="section__subtitle section__subtitle--about"></p>
+
+    <div class="about-me__body">
+      <p></p>
+      <p></p>
+    </div>
+
+    <img src="#" alt="picture of me again">
+  </section>
+
+  <!-- -------------------->
+  <!-- My Work-->
+  <!-- ------------------------>
+
+  <section class="my-work" id="work">
+    <h2 class= "section__title">My work</h2>
+    <p class="section__subtile"></p>
+
+    <div class="portfolio">
+
+      <!-- portfolio item 01 -->
+      <a href="#" class="portfolio__item">
+        <img src="#" alt="" class="portfolio__img">
+      </a>
+      <!-- portfolio item 02 -->
+      <a href="#" class="portfolio__item">
+        <img src="#" alt="" class="portfolio__img">
+      </a>
+      <!-- portfolio item 03 -->
+      <a href="#" class="portfolio__item">
+        <img src="#" alt="" class="portfolio__img">
+      </a>
+      <!-- portfolio item 04 -->
+      <a href="#" class="portfolio__item">
+        <img src="#" alt="" class="portfolio__img">
+      </a>
+
+    </div>
   </section>
 
 
+  <!-- -------------------->
+  <!-- Footer-->
+  <!-- ------------------------>
+  <footer>
+    <a href="mailto: snaxboxes@gmail.com" class="footer__link">snaxboxes@gmail.com</a>
+
+    <ul class="social-list">
+      <li class="social-list__item"><a href="#" class="social-list__link">a</a></li>
+      <li class="social-list__item"><a href="#" class="social-list__link">b</a></li>
+      <li class="social-list__item"><a href="#" class="social-list__link">c</a></li>
+      <li class="social-list__item"><a href="#" class="social-list__link">d</a></li>
+    </ul>
+  </footer>
 
 
 
