css styles for titles and sub-titles

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <title>second porfolio</title>
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
   <link rel="stylesheet" type="text/css" href="css/all.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+
 </head>
 
-
-  
 <body>
   <header>
 
     <div class="logo">
-      <!-- <img src="" alt=""> -->
+      <!-- <span><dev-Eric></span> -->
+      <img src="img/deveric.png" alt="">
     </div>
 
     <button class="nav-toggle" aria-label="toggle navigation">
@@ -38,9 +40,8 @@
     <h1 class="section__title section__title--intro">
       Hi, I am <strong>Eric.</strong>
     </h1>
-
     <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-    <!-- <img src="" alt="a picture of myself"> -->
+    <img src="img/me.png" alt="a picture of myself">
   </section>
   
   <!-- -------------------->
@@ -82,15 +83,15 @@
   <!-- ------------------------>
   
   <section class="about-me" id="about">
-    <h2 class="section__title section__title--about"></h2>
-    <p class="section__subtitle section__subtitle--about"></p>
+    <h2 class="section__title section__title--about">Who Am I</h2>
+    <p class="section__subtitle section__subtitle--about">Front-end developer based in Hangzhou</p>
 
     <div class="about-me__body">
       <p></p>
       <p></p>
     </div>
 
-    <img src="#" alt="picture of me again">
+    <img src="img/me.png" alt="picture of me again">
   </section>
 
   <!-- -------------------->
@@ -99,25 +100,25 @@
 
   <section class="my-work" id="work">
     <h2 class= "section__title">My work</h2>
-    <p class="section__subtile"></p>
+    <p class="section__subtile">section subtitle</p>
 
     <div class="portfolio">
 
       <!-- portfolio item 01 -->
       <a href="#" class="portfolio__item">
-        <img src="#" alt="" class="portfolio__img">
+        <img src="img/project1.jpg" alt="" class="portfolio__img">
       </a>
       <!-- portfolio item 02 -->
       <a href="#" class="portfolio__item">
-        <img src="#" alt="" class="portfolio__img">
+        <img src="img/project2.jpg" alt="" class="portfolio__img">
       </a>
       <!-- portfolio item 03 -->
       <a href="#" class="portfolio__item">
-        <img src="#" alt="" class="portfolio__img">
+        <img src="img/project3.jpg" alt="" class="portfolio__img">
       </a>
       <!-- portfolio item 04 -->
       <a href="#" class="portfolio__item">
-        <img src="#" alt="" class="portfolio__img">
+        <img src="img/project4.jpg" alt="" class="portfolio__img">
       </a>
 
     </div>
