added media queries for 600px-800px screens

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       Hi, I am <strong>Eric.</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-    <img src="img/me.png" alt="a picture of myself">
+    <img src="img/me3.png" alt="a picture of myself" class="intro__img">
   </section>
   
   <!-- -------------------->
