css for the what-i-do section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- ------------------------>
 
   <section class="my-services" id="services">
-    <h2 class="section__title section__title--services">what i do</h2>
+    <h2 class="section__title section__title--services">What i do</h2>
 
     <div class="services">
       <div class="service">
@@ -72,9 +72,9 @@
           odit minus perspiciatis modi voluptatibus sapiente facere magnam quas expedita quibusdam numquam 
           laboriosam perferendis non illo beatae, provident repudiandae?</p>
       </div> <!-- /service -->
-
     </div><!-- /services -->
-    <a href="#work">See My Work</a>
+
+    <a href="#work" class="btn">My Work</a>
 
   </section>
 
