css for about-me section

--- a/index.html
+++ b/index.html
@@ -87,11 +87,10 @@
     <p class="section__subtitle section__subtitle--about">Front-end developer based in Hangzhou</p>
 
     <div class="about-me__body">
-      <p></p>
-      <p></p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus repellendus quasi maxime pariatur saepe quaerat rem blanditiis ipsum dolorem facere delectus sequi inventore dignissimos veritatis consequatur, ullam quisquam cum eaque.</p>
     </div>
 
-    <img src="img/me.png" alt="picture of me again">
+    <img src="img/me3.png" alt="picture of me again" class="about-me__img">
   </section>
 
   <!-- -------------------->
