--- a/index.html
+++ b/index.html
@@ -98,22 +98,23 @@
   <!-- ------------------------>
 
   <section class="my-work" id="work">
-    <h2 class= "section__title">My work</h2>
-    <p class="section__subtile">section subtitle</p>
+
+    <h2 class= "section__title--work">My work</h2>
+    <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
     <div class="portfolio">
-
       <!-- portfolio item 01 -->
       <a href="#" class="portfolio__item">
-        <img src="img/project1.jpg" alt="" class="portfolio__img">
+        <img src="img/project4.jpg" alt="" class="portfolio__img">
       </a>
       <!-- portfolio item 02 -->
+    
       <a href="#" class="portfolio__item">
-        <img src="img/project2.jpg" alt="" class="portfolio__img">
+        <img src="img/project4.jpg" alt="" class="portfolio__img">
       </a>
       <!-- portfolio item 03 -->
       <a href="#" class="portfolio__item">
-        <img src="img/project3.jpg" alt="" class="portfolio__img">
+        <img src="img/project4.jpg" alt="" class="portfolio__img">
       </a>
       <!-- portfolio item 04 -->
       <a href="#" class="portfolio__item">
