some footer features

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
     <a href="mailto: snaxboxes@gmail.com" class="footer__link">snaxboxes@gmail.com</a>
 
     <ul class="social-list">
-      <li class="social-list__item"><a href="#" class="social-list__link">a</a></li>
-      <li class="social-list__item"><a href="#" class="social-list__link">b</a></li>
-      <li class="social-list__item"><a href="#" class="social-list__link">c</a></li>
-      <li class="social-list__item"><a href="#" class="social-list__link">d</a></li>
+      <li class="social-list__item"><a href="#" class="social-list__link"><i class="fab fa-github"></i></a></li>
+      <li class="social-list__item"><a href="#" class="social-list__link"><i class="fab fa-facebook"></i></a></li>
+      <li class="social-list__item"><a href="#" class="social-list__link"><i class="fab fa-twitter-square"></i></a></li>
+      <li class="social-list__item"><a href="#" class="social-list__link"><i class="fab fa-linkedin"></i></a></li>
     </ul>
   </footer>
 
